update nube img

--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -21,7 +21,7 @@
             <div class="flex title-logo">
                 <div class="center">
                     <a href="../index.html">
-                        <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                     </a>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                         <div class="flex">
                             <div class="center logo-burger-img">
                                 <a href="../index.html">
-                                    <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                                 </a>
                             </div>
                         </div>
@@ -66,7 +66,7 @@
         <section class="ver-producto center" id="aborigen">
             <article class="grid ver-producto-column-2">
                 <div class="ver-producto-img center">
-                    <img src="../img/inicio-img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" id="img-change" class="producto-img">
+                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043f98fb67f81903884_QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" id="img-change" class="producto-img">
                 </div>
                 <div class="flex flex-column ver-producto-2">
                     <div class="producto-title">
@@ -109,7 +109,7 @@
                         <div class="my-item grid gap1-3rem">
                             <div class="img-producto center">
                                 <a href="#aborigen">
-                                    <img src="../img/inicio-img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043f98fb67f81903884_QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
                                 </a>
                             </div>
                             <div class="text-producto center">
@@ -129,7 +129,7 @@
                         <div class="my-item grid gap1-3rem">
                             <div class="img-producto center">
                                 <a href="https://tantrica.pe/" target="_blank">
-                                    <img src="../img/inicio-img/Tantrica.png" alt="Tantrica">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043afee771ed3316164_Tantrica.png" alt="Tantrica">
                                 </a>
                             </div>
                             <div class="text-producto center">
@@ -149,7 +149,7 @@
                         <div class="my-item grid gap1-3rem">
                             <div class="img-producto center">
                                 <a href="qerochela-luna-miel.html">
-                                    <img src="../img/inicio-img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da04352c03b07f7dcf05b_QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
                                 </a>
                             </div>
                             <div class="text-producto center">
@@ -182,7 +182,7 @@
                 </div>
             </div>
             <div class="img-footer">
-                <img src="../img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+                <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d165d44931472a2a765_Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
             </div>
         </div>
         <div class="my-footer2 flex footer-column-2-2">
@@ -190,7 +190,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="../index.html">
-                            <img src="../img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da092f2f6d2dda40ff911_logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
