--- a/servicios.html
+++ b/servicios.html
@@ -21,7 +21,7 @@
             <div class="flex title-logo">
                 <div class="center">
                     <a href="index.html">
-                        <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                     </a>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                         <div class="flex"> 
                             <div class="center logo-burger-img">
                                 <a href="index.html">
-                                    <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                                 </a>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-1.jpg" alt="Asesoría e Implementación de Plantas Cerveceras">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da2f59f546840cda9077a_servicio-1.jpg" alt="Asesoría e Implementación de Plantas Cerveceras">
                     </div>
                     <div class="ser-title">
                         <h2>Implementación de Plantas</h2>
@@ -86,7 +86,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-2.jpg" alt="Instalación de Barras de Cerveza">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da2f5c68bccd0d964faf8_servicio-2.jpg" alt="Instalación de Barras de Cerveza">
                     </div>
                     <div class="ser-title">
                         <h2>Instalación de Barras de Cerveza</h2>
@@ -102,7 +102,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-3.jpg" alt="Cerveza para Eventos en Botellas o Barril">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da2f5c68bccd0d964fad2_servicio-3.jpg" alt="Cerveza para Eventos en Botellas o Barril">
                     </div>
                     <div class="ser-title">
                         <h2>Cerveza en Botellas o Barril</h2>
@@ -118,7 +118,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-4.jpg" alt="Maquila y Marca Blanca">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da2f5ff4139ac10878cde_servicio-4.jpg" alt="Maquila y Marca Blanca">
                     </div>
                     <div class="ser-title">
                         <h2>Maquila y Marca Blanca</h2>
@@ -134,7 +134,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-5.jpg" alt="Cursos y Capacitaciones">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da2f58d4fd6f40ddedeaa_servicio-5.jpg" alt="Cursos y Capacitaciones">
                     </div>
                     <div class="ser-title">
                         <h2>Cursos y Capacitaciones</h2>
@@ -150,7 +150,7 @@
             <div class="item center">
                 <div class="item-s flex flex-column gap-ser">
                     <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-6.png" alt="Diseño y Producción de Merchandising">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da2f538e0510d01f15c65_servicio-6.png" alt="Diseño y Producción de Merchandising">
                     </div>
                     <div class="ser-title">
                         <h2>Diseño y Producción de Merch</h2>
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="img-footer">
-                <img src="img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+                <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d165d44931472a2a765_Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
             </div>
         </div>
         <div class="my-footer2 flex footer-column-2-2">
@@ -188,7 +188,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="index.html">
-                            <img src="img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da092f2f6d2dda40ff911_logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
