--- a/taproom.html
+++ b/taproom.html
@@ -22,7 +22,7 @@
             <div class="flex title-logo">
                 <div class="center">
                     <a href="index.html">
-                        <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                     </a>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                         <a href="index.html">
                             <div class="flex">
                                 <div class="center logo-burger-img">
-                                    <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                                 </div>
                             </div>
                         </a>
@@ -66,7 +66,7 @@
     <main id="taproom">
         <div class="taproom center">
             <div class="taproom-img">
-                <img src="img/taproom-img/taproom-Principal.png" alt="Fondo Templo Q'ero Chela">
+                <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da3a7ff4139ac1087ccc3_taproom-Principal.png" alt="Fondo Templo Q'ero Chela">
             </div>
             <div class="my-taproom center gappx">
                 <div class="taproom-title center-align">
@@ -82,37 +82,37 @@
         </div>
         <div class="taproom-what center gappx2">
             <div class="item-lu">
-                <img src="img/taproom-img/Lupulos-1.png" alt="Imagenes de Lupulos">
+                <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da3a666f6511b233dd02c_Lupulos-1.png" alt="Imagenes de Lupulos">
             </div>
             <div class="flex flex-column-taproom-what gappx3">
                 <div class="taproom-what-info center">
                     <div class="center-left taproom-what-title">
-                       <img src="img/taproom-img/taproom-Pregunta.png" alt="Imagen ¿Que es un Taproom?">
+                       <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da3a634808eee318e02b5_taproom-Pregunta.png" alt="Imagen ¿Que es un Taproom?">
                     </div>
                     <div class="center-align taproom-what-text">
                         <p>Un Taproom es el espacio donde una cervecería artesanal ofrece sus cervezas directamente al público, servidas frescas y recién salidas del barril. Es el lugar ideal para conocer los productos, probar distintas variedades y vivir la experiencia cervecera en su forma más auténtica, rodeado del ambiente y la esencia de la marca.</p>
                     </div>
                 </div>
                 <div class="taproom-what-img">
-                    <img src="img/taproom-img/taproom-Fotos.png" alt="Imagenes Producto y Templo">
+                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da3a7afee771ed332911c_taproom-Fotos.png" alt="Imagenes Producto y Templo">
                 </div>
             </div>
             <div class="item-lu-2">
-                <img src="img/taproom-img/Lupulos-2.png" alt="Imagenes de Lupulos">
+                <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da3a69f546840cda95fff_Lupulos-2.png" alt="Imagenes de Lupulos">
             </div>
         </div>
         <div class="video-taproom center flex flex-column center">
             <div class="center">
                 <div class="fondo">
-                    <img src="img/taproom-img/taproom-Secundario.png" alt="Fondo Video Taproom">
+                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da3a6d4a3798fc7678469_taproom-Secundario.png" alt="Fondo Video Taproom">
                 </div>
                 <div class="cuadro-video">
                     <div class="cuadro-video-img center">
-                        <img src="img/taproom-img/Fondo-Video.jpeg" alt="Fondo Video">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da3a7f3deed0bc9fc2ba3_Fondo-Video.jpeg" alt="Fondo Video">
                     </div>
                     <div class="center cuadro-enlace">
                         <a href="https://web.facebook.com/share/r/19FCsCZmnX/">
-                            <img src="img/taproom-img/boton-Play-Q'eroChela.png" alt="Botón Play Q'ero Chela" class="pulsate-fwd">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da3a6fc716f3fc0f525e6_boton-Play-Q%27eroChela.png" alt="Botón Play Q'ero Chela" class="pulsate-fwd">
                         </a>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="img-footer">
-                <img src="img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+                <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d165d44931472a2a765_Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
             </div>
         </div>
         <div class="my-footer2 flex footer-column-2-2">
@@ -142,7 +142,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="index.html">
-                            <img src="img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da092f2f6d2dda40ff911_logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
