--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="flex title-logo">
                 <div class="center">
                     <a href="index.html">
-                        <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                     </a>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                         <a href="index.html">
                             <div class="flex">
                                 <div class="center logo-burger-img">
-                                    <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                                 </div>
                             </div>
                         </a>
@@ -65,24 +65,24 @@
 
     <main class="container" id="qerochela">
         <section class="banner">
-            <img src="img/inicio-img/Banner.png" alt="Banner">
+            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9ec174d687afe216b795_Banner.png" alt="Banner">
         </section>
         <section class="categorias center">
             <article class="grid cat-column-2">
                 <div class="item-img">
                     <a href="producto/qerochela.html">
-                        <img src="img/inicio-img/Publicidad1.avif" alt="Publicidad 1">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9ec0f98fb67f818fb902_Publicidad1.avif" alt="Publicidad 1">
                     </a>
                 </div>
                 <div class="grid cat-subcolumn-2">
                     <div class="item-img2">
                         <a href="https://tantrica.pe/" target="_blank">
-                            <img src="img/inicio-img/Publicidad2.avif" alt="Publicidad 2">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9ec05fbc5dc9636fd1f3_Publicidad2.avif" alt="Publicidad 2">
                         </a>
                     </div>
                     <div class="item-img2">
                         <a href="producto/qerochela-luna-miel.html">
-                            <img src="img/inicio-img/Publicidad3.avif" alt="Publicidad 3">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9ec05b46e54492a06460_Publicidad3.avif" alt="Publicidad 3">
                         </a>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                         <div class="my-item grid gap1-3rem">
                             <div class="img-producto center">
                                 <a href="producto/qerochela.html">
-                                    <img src="img/inicio-img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043f98fb67f81903884_QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen">
                                 </a>
                             </div>
                             <div class="text-producto center">
@@ -123,7 +123,7 @@
                         <div class="my-item grid gap1-3rem">
                             <div class="img-producto center">
                                 <a href="https://tantrica.pe/">
-                                    <img src="img/inicio-img/Tantrica.png" alt="Tantrica">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043afee771ed3316164_Tantrica.png" alt="Tantrica">
                                 </a>
                             </div>
                             <div class="text-producto center">
@@ -143,7 +143,7 @@
                         <div class="my-item grid gap1-3rem">
                             <div class="img-producto center">
                                 <a href="producto/qerochela-luna-miel.html">
-                                    <img src="img/inicio-img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da04352c03b07f7dcf05b_QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel">
                                 </a>
                             </div>
                             <div class="text-producto center">
@@ -176,7 +176,7 @@
                 </div>
             </div>
             <div class="img-footer">
-                <img src="img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+                <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d165d44931472a2a765_Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
             </div>
         </div>
         <div class="my-footer2 flex footer-column-2-2">
@@ -184,7 +184,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="index.html">
-                            <img src="img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da092f2f6d2dda40ff911_logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
