--- a/nosotros.html
+++ b/nosotros.html
@@ -22,7 +22,7 @@
             <div class="flex title-logo">
                 <div class="center">
                     <a href="index.html">
-                        <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                     </a>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                         <div class="flex"> 
                             <div class="center logo-burger-img">
                                 <a href="index.html">
-                                    <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                                 </a>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="nosotros-img center">
-                    <img src="img/nosotros-img/Nosotros-img.jpg" alt="Imagen de Nosotros">
+                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da11cf98fb67f8190843f_Nosotros-img.jpg" alt="Imagen de Nosotros">
                 </div>
             </div>
 
@@ -181,13 +181,13 @@
                 </div>
                 <div class="grid medallas-column">
                     <div class="medallas center">
-                        <img class="img" src="img/nosotros-img/Medalla-Emprendedor.png" alt="Premio Emprendedor 2024">
+                        <img class="img" src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da11c5fbc5dc96370a212_Medalla-Emprendedor.png" alt="Premio Emprendedor 2024">
                         <div class="obj-text center">
                             <h2>emprendedor del año 2024</h2>
                         </div>
                     </div>
                     <div class="medallas center">
-                        <img class="img" src="img/nosotros-img/Medalla-Bronce.png" alt="Premio Bronce">
+                        <img class="img" src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da11c8d4fd6f40dde2597_Medalla-Bronce.png" alt="Premio Bronce">
                         <div class="obj-text center">
                             <h2>medalla de bronce</h2>
                         </div>
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <div class="img-footer">
-                <img src="img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+                <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d165d44931472a2a765_Muestra-QeroChela.png    " alt="Muestra Q'ero Chela">
             </div>
         </div>
         <div class="my-footer2 flex footer-column-2-2">
@@ -219,7 +219,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="index.html">
-                            <img src="img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da092f2f6d2dda40ff911_logo-footer.png  " alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
