--- a/productos.html
+++ b/productos.html
@@ -21,7 +21,7 @@
             <div class="flex title-logo">
                 <div class="center">
                     <a href="index.html">
-                        <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                     </a>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                         <a href="index.html">
                             <div class="flex">
                                 <div class="center logo-burger-img">
-                                    <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                                 </div>
                             </div>
                         </a>
@@ -70,7 +70,7 @@
             <div class="flex flex-column">
                 <div class="center">
                     <a href="producto/qerochela.html">
-                        <img src="img/inicio-img/QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" class="item-img">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043f98fb67f81903884_QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" class="item-img">
                     </a>
                 </div>
                 <div class="producto-info flex flex-column">
@@ -85,7 +85,7 @@
             <div class="flex flex-column">
                 <div class="center">
                     <a href="https://tantrica.pe/">
-                        <img src="img/inicio-img/Tantrica.png" alt="Tántrica" class="item-img">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043afee771ed3316164_Tantrica.png" alt="Tántrica" class="item-img">
                     </a>
                 </div>
                 <div class="producto-info flex flex-column">
@@ -100,7 +100,7 @@
             <div class="flex flex-column">
                 <div class="center">
                     <a href="producto/qerochela-luna-miel.html">
-                        <img src="img/inicio-img/QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel" class="item-img">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da04352c03b07f7dcf05b_QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel" class="item-img">
                     </a>
                 </div>
                 <div class="producto-info flex flex-column">
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="img-footer">
-                <img src="img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+                <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d165d44931472a2a765_Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
             </div>
         </div>
         <div class="my-footer2 flex footer-column-2-2">
@@ -137,7 +137,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="index.html">
-                            <img src="img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da092f2f6d2dda40ff911_logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
