--- a/servicio/Merchandising.html
+++ b/servicio/Merchandising.html
@@ -18,7 +18,7 @@
             <div class="flex title-logo">
                 <div class="center">
                     <a href="../index.html">
-                        <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                     </a>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                         <div class="flex"> 
                             <div class="center logo-burger-img">
                                 <a href="index.html">
-                                    <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                                 </a>
                             </div>
                         </div>
@@ -87,13 +87,13 @@
             </div>
             <div class="grid grid-column-diseño gapdi-2">
                 <div class="dis-img center">
-                    <img src="img-serv/img1.JPG" alt="Botella Patrón Andino">
+                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da50c0996393aafe1e890_img1.JPG" alt="Botella Patrón Andino">
                 </div>
                 <div class="dis-img center"> 
-                    <img src="img-serv/img2.jpg" alt="Botella Patrón Andino">
+                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da50c27b16308a5a41ccb_img2.jpg" alt="Botella Patrón Andino">
                 </div>
                 <div class="dis-img center">
-                    <img src="img-serv/img3.jpg" alt="Botella Patrón Andino">
+                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da50b74d687afe218d7f2_img3.jpg" alt="Botella Patrón Andino">
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="img-footer">
-                <img src="../img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+                <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d165d44931472a2a765_Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
             </div>
         </div>
         <div class="my-footer2 flex footer-column-2-2">
@@ -121,7 +121,7 @@
                 <div class="flex title-logo">
                     <div class="center">
                         <a href="../index.html">
-                            <img src="../img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da092f2f6d2dda40ff911_logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
