--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
     <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script>   
 </head>
 <body>
+    <div class="message">
+        <div class="my-message center">
+        </div>
+        <div class="message-img center flex flex-column">
+            <div class="message-a">
+                <div>
+                    <a href="https://www.facebook.com/share/p/1FM9N5Qz6J/" target="_blank">
+                        <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680ffef71de9d700edc097f1_post%20temploo%20(16).jpg" alt="Publicidad Templo Q'ero Chela" class="pulsate-fwd">
+                    </a>
+                </div>
+                <i class="fa-solid fa-x" id="close"></i>
+            </div>
+        </div>
+    </div>
+
     <header>
         <nav class="grid column-header">
             <div class="flex title-logo">
@@ -256,6 +271,10 @@
         </div>
     </footer>
 
+    <script src="js/message.js"></script>
+<!-- 
     <script src="js/verificado.js"></script>
+    
+-->
 </body>
 </html>
