--- a/verificador.html
+++ b/verificador.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Q'ero Chela</title>
     <link rel="stylesheet" href="css/css.css">
+    <link rel="icon" type="image/png" href="img/Logo-Web.png">
 </head>
 <body>
     <main class="flex flex-column center">
