--- a/productos.html
+++ b/productos.html
@@ -62,57 +62,112 @@
         </nav>
     </header>
 
-    <main class="productos" id="productos">
-        <div class="title-productos center">
-            <h2>productos</h2>
-        </div>
-        <section class="my-products center grid productos-column-3">
-            <div class="flex flex-column">
-                <div class="center">
-                    <a href="producto/qerochela.html">
-                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043f98fb67f81903884_QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" class="item-img">
-                    </a>
-                </div>
-                <div class="producto-info flex flex-column">
-                    <div class="center">
-                        <p>aborigen</p>
-                    </div>
-                    <div class="center">
-                        <button onclick="location.href='producto/qerochela.html'">conoce más</button>
-                    </div>
-                </div>
+    <main class="productos flex flex-column center gap-pro" id="productos">
+        <article>
+            <div class="title-productos center">
+                <h2>productos</h2>
             </div>
-            <div class="flex flex-column">
-                <div class="center">
-                    <a href="https://tantrica.pe/">
-                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043afee771ed3316164_Tantrica.png" alt="Tántrica" class="item-img">
-                    </a>
-                </div>
-                <div class="producto-info flex flex-column">
+            <section class="my-products center grid productos-column-3">
+                <div class="item-flex flex flex-column">
                     <div class="center">
-                        <p>tántrica</p>
+                        <a href="producto/qerochela.html">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043f98fb67f81903884_QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" class="item-img">
+                        </a>
                     </div>
-                    <div class="center">
-                        <button onclick="location.href='https://tantrica.pe/'">conoce más</button>
+                    <div class="producto-info flex flex-column">
+                        <div class="center">
+                            <p>aborigen</p>
+                        </div>
+                        <div class="center">
+                            <button onclick="location.href='producto/qerochela.html'">conoce más</button>
+                        </div>
                     </div>
                 </div>
+                <div class="item-flex flex flex-column">
+                    <div class="center">
+                        <a href="https://tantrica.pe/">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043afee771ed3316164_Tantrica.png" alt="Tántrica" class="item-img">
+                        </a>
+                    </div>
+                    <div class="producto-info flex flex-column">
+                        <div class="center">
+                            <p>tántrica</p>
+                        </div>
+                        <div class="center">
+                            <button onclick="location.href='https://tantrica.pe/'">conoce más</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-flex flex flex-column">
+                    <div class="center">
+                        <a href="producto/qerochela-luna-miel.html">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da04352c03b07f7dcf05b_QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel" class="item-img">
+                        </a>
+                    </div>
+                    <div class="producto-info flex flex-column">
+                        <div class="center">
+                            <p>luna de miel</p>
+                        </div>
+                        <div class="center">
+                            <button onclick="location.href='producto/qerochela-luna-miel.html'">conoce más</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </article>
+
+        <!-- <article>
+            <div class="title-productos center">
+                <h2>promos festivos</h2>
             </div>
-            <div class="flex flex-column">
-                <div class="center">
-                    <a href="producto/qerochela-luna-miel.html">
-                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da04352c03b07f7dcf05b_QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel" class="item-img">
-                    </a>
-                </div>
-                <div class="producto-info flex flex-column">
+            <section class="my-products center grid productos-column-3">
+                <div class="item-flex flex flex-column">
                     <div class="center">
-                        <p>luna de miel</p>
+                        <a href="producto/qerochela.html">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043f98fb67f81903884_QeroChela_Aborigen.png" alt="Q'ero Chela Aborigen" class="item-img">
+                        </a>
                     </div>
-                    <div class="center">
-                        <button onclick="location.href='producto/qerochela-luna-miel.html'">conoce más</button>
+                    <div class="producto-info flex flex-column">
+                        <div class="center">
+                            <p>basico</p>
+                        </div>
+                        <div class="center">
+                            <button onclick="location.href='producto/qerochela.html'">conoce más</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+                <div class="item-flex flex flex-column">
+                    <div class="center">
+                        <a href="https://tantrica.pe/">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da043afee771ed3316164_Tantrica.png" alt="Tántrica" class="item-img">
+                        </a>
+                    </div>
+                    <div class="producto-info flex flex-column">
+                        <div class="center">
+                            <p>intermedio</p>
+                        </div>
+                        <div class="center">
+                            <button onclick="location.href='https://tantrica.pe/'">conoce más</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="item-flex flex flex-column">
+                    <div class="center">
+                        <a href="producto/qerochela-luna-miel.html">
+                            <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da04352c03b07f7dcf05b_QeroChela_LunaMiel.png" alt="Q'ero Chela Luna de Miel" class="item-img">
+                        </a>
+                    </div>
+                    <div class="producto-info flex flex-column">
+                        <div class="center">
+                            <p>premium</p>
+                        </div>
+                        <div class="center">
+                            <button onclick="location.href='producto/qerochela-luna-miel.html'">conoce más</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </article> -->
     </main>
 
     <footer class="footer center">
