--- a/taproom.html
+++ b/taproom.html
@@ -195,7 +195,7 @@
                 <div class="flex flex-2">
                     <h2>Productos</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="#qerochela">Q'ero Chela</a>
+                        <a href="index.html">Q'ero Chela</a>
                         <a href="https://tantrica.pe/" target="_blank">Tantrica</a>
                     </div>
                 </div>
