--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <meta name="theme-color" content="#000">
     <title>Q'ero Chela</title>
     <link rel="preload" href="css/css.css" as="style">
     <link rel="stylesheet" href="css/css.css">
