--- a/producto/qerochela-luna-miel.html
+++ b/producto/qerochela-luna-miel.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <meta name="theme-color" content="#000">
     <title>Luna de Miel - Producto</title>
     <link rel="preload" href="../css/producto_css.css" as="style">
     <link rel="stylesheet" href="../css/producto_css.css">
