--- a/productos.html
+++ b/productos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <meta name="theme-color" content="#000">
     <title>Q'ero Chela - Productos</title>
     <link rel="preload" href="css/productos_css.css" as="style">
     <link rel="stylesheet" href="css/productos_css.css">
