--- a/verificador.html
+++ b/verificador.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000">
     <title>Q'ero Chela</title>
     <link rel="preload" href="css/verificador_css.css" as="style">
     <link rel="stylesheet" href="css/verificador_css.css">
