--- a/taproom.html
+++ b/taproom.html
@@ -22,7 +22,7 @@
         <nav class="grid column-header">
             <div class="flex title-logo">
                 <div class="center">
-                    <a href="index.html">
+                    <a href="index.php">
                         <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                     </a>
                 </div>
@@ -34,7 +34,7 @@
                 </label>
                 <ul class="flex gap5rem flex-row-2">
                     <li class="logo-burger">
-                        <a href="index.html">
+                        <a href="index.php">
                             <div class="flex">
                                 <div class="center logo-burger-img">
                                     <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
@@ -43,7 +43,7 @@
                         </a>
                     </li>    
                     <li class="center burger-center">
-                        <a href="productos.html">Productos</a>
+                        <a href="productos.php">Productos</a>
                     </li>
                     <li class="center burger-center">
                         <a href="servicios.html">Servicios</a>
@@ -142,7 +142,7 @@
             <div class="flex flex-2"> 
                 <div class="flex title-logo">
                     <div class="center">
-                        <a href="index.html">
+                        <a href="index.php">
                             <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680da092f2f6d2dda40ff911_logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
@@ -196,7 +196,7 @@
                 <div class="flex flex-2">
                     <h2>Productos</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="index.html">Q'ero Chela</a>
+                        <a href="index.php">Q'ero Chela</a>
                         <a href="https://tantrica.pe/" target="_blank">Tantrica</a>
                     </div>
                 </div>
