--- a/servicio/Merchandising.html
+++ b/servicio/Merchandising.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000">
     <title>Diseño de Merchandising</title>
     <link rel="preload" href="style/merchandising_css.css" as="style">
     <link rel="stylesheet" href="style/merchandising_css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gidole&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="../img/Logo-Web.png">
+    <link rel="icon" type="image/png" href="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f8146c15656b15c111316_Logo-Web.png">
     <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script> 
 </head>
 <body>
