update carrito card

--- a/ecommerce/carrito.html
+++ b/ecommerce/carrito.html
@@ -40,8 +40,16 @@
                         <button id="btn5" class="button">50 l</button>
                     </div>
                     <div class="flex gap-producto-3">
-                        <div class="producto-cantidad">
-                            <input type="number" min="1" value="1" class="input-cantidad">
+                        <div class="flex gap-producto-4">
+                            <div class="btn-minus center">
+                                <button>-</button>
+                            </div>
+                            <div class="producto-cantidad center">
+                                <p>1</p>
+                            </div>
+                            <div class="btn-plus center">
+                                <button>♠</button>
+                            </div>
                         </div>
                         <div class="producto-btn">
                             <input type="button" value="Añadir" class="input-enviar">
@@ -68,10 +76,18 @@
                         <button id="btn5" class="button">50 l</button>
                     </div>
                     <div class="flex gap-producto-3">
-                        <div class="producto-cantidad">
-                            <input type="number" min="1" value="1" class="input-cantidad">
+                        <div class="flex gap-producto-4">
+                            <div class="btn-minus center">
+                                <button>-</button>
+                            </div>
+                            <div class="producto-cantidad center">
+                                <p>1</p>
+                            </div>
+                            <div class="btn-plus center">
+                                <button>♠</button>
+                            </div>
                         </div>
-                        <div class="producto-btn">
+                        <div class="producto-btn center">
                             <input type="button" value="Añadir" class="input-enviar">
                         </div>
                     </div>
@@ -96,8 +112,16 @@
                         <button id="btn5" class="button">50 l</button>
                     </div>
                     <div class="flex gap-producto-3">
-                        <div class="producto-cantidad">
-                            <input type="number"  min="1" value="1" class="input-cantidad">
+                        <div class="flex gap-producto-4">
+                            <div class="btn-minus center">
+                                <button>-</button>
+                            </div>
+                            <div class="producto-cantidad center">
+                                <p>1</p>
+                            </div>
+                            <div class="btn-plus center">
+                                <button>♠</button>
+                            </div>
                         </div>
                         <div class="producto-btn">
                             <input type="button" value="Añadir" class="input-enviar">
