update carrito proto

--- a/ecommerce/carrito.html
+++ b/ecommerce/carrito.html
@@ -20,10 +20,10 @@
 <body>
   
     <main>
-        <section class="flex producto gap-producto">
+        <section class="grid grid-template-carrito center producto gap-producto">
             <div class="flex item-producto gap-producto">
                 <div class="producto-img center">
-                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="">
+                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="" class="img-producto">
                 </div>
                 <div class="producto-inf flex flex-column center gap-producto-2">
                     <div class="producto-name">
@@ -48,22 +48,22 @@
                                 <p>1</p>
                             </div>
                             <div class="btn-plus center">
-                                <button>♠</button>
+                                <button>+</button>
                             </div>
                         </div>
                         <div class="producto-btn">
-                            <input type="button" value="Añadir" class="input-enviar">
+                            <button class="input-enviar">Añadir</button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="flex item-producto gap-producto">
                 <div class="producto-img center">
-                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="">
+                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="" class="img-producto">
                 </div>
                 <div class="producto-inf flex flex-column center gap-producto-2">
                     <div class="producto-name">
-                        <h2>aborigen</h2>
+                        <h2>aborigen2</h2>
                     </div>
                     <div class="producto-precio">
                         <p>PEN <span class="precio">7.50</span></p>
@@ -84,22 +84,22 @@
                                 <p>1</p>
                             </div>
                             <div class="btn-plus center">
-                                <button>♠</button>
+                                <button>+</button>
                             </div>
                         </div>
                         <div class="producto-btn center">
-                            <input type="button" value="Añadir" class="input-enviar">
+                            <button class="input-enviar">Añadir</button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="flex item-producto gap-producto">
                 <div class="producto-img center">
-                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="">
+                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="" class="img-producto">
                 </div>
                 <div class="producto-inf flex flex-column center gap-producto-2">
                     <div class="producto-name">
-                        <h2>aborigen</h2>
+                        <h2>aborigen3</h2>
                     </div>
                     <div class="producto-precio">
                         <p>PEN <span class="precio">7.50</span></p>
@@ -120,17 +120,22 @@
                                 <p>1</p>
                             </div>
                             <div class="btn-plus center">
-                                <button>♠</button>
+                                <button>+</button>
                             </div>
                         </div>
                         <div class="producto-btn">
-                            <input type="button" value="Añadir" class="input-enviar">
+                            <button class="input-enviar">Añadir</button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
+        <h2>mi lista</h2>
+        <ul id="mi-carrito">
+
+        </ul>
 
     <script src="js/button-precio.js"></script>
 </body>
