--- a/ecommerce/carrito.html
+++ b/ecommerce/carrito.html
@@ -18,7 +18,64 @@
     <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script>   
 </head>
 <body>
-  
+    <header>
+        <nav class="grid column-header">
+            <div class="flex title-logo">
+                <div class="center">
+                    <a href="../index.php">
+                        <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                    </a>
+                </div>
+            </div>
+            <div class="flex navegation">
+                <input type="checkbox" id="burgercheck">
+                <label for="burgercheck" class="burger-icon">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </label>
+                <ul class="flex gap2rem flex-row-2" id="mi-carrito"> 
+                    <li class="logo-burger">
+                        <div class="flex">
+                            <div class="center logo-burger-img">
+                                <a href="../index.php">
+                                    <img src="https://cdn.prod.website-files.com/680d9cccfc716f3fc0f2ee3b/680d9d168d4fd6f40ddc976c_logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="center burger-center">
+                        <p class="title-carrito">Mi carrito</p>
+                    </li>
+                    <!-- <li class="burger-center">
+                        <div class="flex mi-carrito-gap mi-producto">
+                            <div class="carrito-img center">
+                                <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="$">
+                            </div>
+                            <div class="flex flex-column center mi-carrito-gap2">
+                                <div class="carrito-title">
+                                    <p></p>
+                                </div>
+                                <div class="flex flex-column center mi-carrito-gap3">
+                                    <div class="carrito-formato">
+                                        <p>Formato: <span id="carrito-for"></span></p>
+                                    </div>
+                                    <div class="carrito-cantidad">
+                                        <p>Cantidad: <span id="carrito-cant"></span></p>
+                                    </div>
+                                    <div class="carrito-subtotal">
+                                        <p>SubTotal: S/. <span id="carrito-sub"></span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="delete center">
+                                <i class="fa-solid fa-xmark"></i>
+                            </div>
+                        </div>
+                    </li>        -->
+                </ul>
+            </div>
+        </nav>
+    </header>
+
     <main>
         <section class="grid grid-template-carrito center producto gap-producto">
             <div class="flex item-producto gap-producto">
@@ -51,7 +108,7 @@
                                 <button>+</button>
                             </div>
                         </div>
-                        <div class="producto-btn">
+                        <div class="producto-btn center">
                             <button class="input-enviar">Añadir</button>
                         </div>
                     </div>
@@ -123,7 +180,7 @@
                                 <button>+</button>
                             </div>
                         </div>
-                        <div class="producto-btn">
+                        <div class="producto-btn center">
                             <button class="input-enviar">Añadir</button>
                         </div>
                     </div>
@@ -132,11 +189,34 @@
         </section>
     </main>
 
-        <h2>mi lista</h2>
-        <ul id="mi-carrito">
+    <!-- <ul id="mi-carrito">
+        <li>
+            <div class="flex mi-carrito-gap">
+                <div class="carrito-img center">
+                    <img src="https://cdn.prod.website-files.com/680f81021936b0d565d34173/680f815308fe96f66a6284b9_QeroChela_Aborigen.png" alt="$">
+                </div>
+                <div class="flex flex-column center mi-carrito-gap2">
+                    <div class="carrito-title">
+                        <p></p>
+                    </div>
+                    <div class="flex flex-column center mi-carrito-gap3">
+                        <div class="carrito-formato">
+                            <p>Formato: <span id="carrito-for"></span></p>
+                        </div>
+                        <div class="carrito-cantidad">
+                            <p>Cantidad: <span id="carrito-cant"></span></p>
+                        </div>
+                        <div class="carrito-subtotal">
+                            <p>SubTotal: S/. <span id="carrito-sub"></span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
+    </ul> -->
 
-        </ul>
-
-    <script src="js/button-precio.js"></script>
+    <script src="js/button.js"></script>
+    <script src="js/carrito.js"></script>
+    <script src="js/delete_carrito.js"></script>
 </body>
 </html>
